--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "query-string": "^6.11.1",
         "vue-router": "^3.1.6"
     }
 }
